[gd_scene load_steps=2 format=3 uid="uid://crafting_table_scene"]

[ext_resource type="Script" path="res://addons/inventory_system/scripts/crafting_table_ui.gd" id="1"]

[node name="CraftingTableUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "Mesa de Trabajo"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="CraftingArea" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="CraftingGrid" type="GridContainer" parent="Panel/MarginContainer/VBox/CraftingArea"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 3

[node name="Arrow" type="Label" parent="Panel/MarginContainer/VBox/CraftingArea"]
layout_mode = 2
text = "â†’"
theme_override_font_sizes/font_size = 48

[node name="ResultArea" type="VBoxContainer" parent="Panel/MarginContainer/VBox/CraftingArea"]
layout_mode = 2

[node name="ResultLabel" type="Label" parent="Panel/MarginContainer/VBox/CraftingArea/ResultArea"]
layout_mode = 2
text = "Resultado"
horizontal_alignment = 1

[node name="ResultSlot" type="Panel" parent="Panel/MarginContainer/VBox/CraftingArea/ResultArea"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Panel/MarginContainer/VBox/CraftingArea/ResultArea/ResultSlot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Quantity" type="Label" parent="Panel/MarginContainer/VBox/CraftingArea/ResultArea/ResultSlot"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 2
vertical_alignment = 2
